--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<app-home></app-home>
+<div id="wrapper">
+
+  <app-header></app-header>
+
+  <div class="main">
+
+    <router-outlet></router-outlet>
+
+  </div>
+
+  <app-footer></app-footer>
+
+</div>
+
+
