--- a/src/app/includes/header/header.component.html
+++ b/src/app/includes/header/header.component.html
@@ -21,8 +21,8 @@
             <a
               [routerLinkActiveOptions]="{ exact: true }"
               routerLinkActive="active"
-              routerLink="job"
-              >Job</a
+              routerLink="product"
+              >Product</a
             >
           </li>
           <li class="nav-item">
