--- a/src/app/pages/home/components/home/home.component.html
+++ b/src/app/pages/home/components/home/home.component.html
@@ -1,1 +1,150 @@
-<p>home works!</p>
+<section class="fuild-container main-container">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6" style="padding:0px 60px 0px 0px;">
+                <h1 class="topbanner-heading">Are You Starving ?</h1>
+                <h2 class="topbanner-subheading">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</h2>
+
+                <button mat-raised-button color="primary"><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>Order Now</button>
+            </div>
+            <div class="col-md-6" style="padding:0px 60px 0px 0px;"style="padding:0px 0px 0px 60px;">
+                <div class="img-landing-banner">
+                    <img src="https://technext.github.io/foodwagon/v1.0.0/assets/img/gallery/hero-header.png" class="topbanner-img"/>
+                </div>
+               
+            </div>
+        </div>
+    </div>
+</section>
+<section class="container discount-container">
+       <div class="row">
+        <div class="col-md-3">
+            <div class="card">
+                <div style="position: relative;">
+                    <img class="card-img-top" src="https://technext.github.io/foodwagon/v1.0.0/assets/img/gallery/discount-item-1.png" alt="Card image cap">
+                    <div class="discount-container-off">
+                        <div>
+                            <h1 class="discount-heading">15</h1>
+                        </div>
+                        <div>
+                            <h2 class="discount-percentage">%</h2>
+                            <h2 class="discount-off">off</h2>
+                        </div>                        
+                    </div>
+                </div>
+                
+                <div class="card-body">
+                  <h5 class="discount-name">Flat Hill Slingback</h5>
+                  <h5 class="remaining-days">6 days Remaining</h5>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <div style="position: relative;">
+                    <img class="card-img-top" src="https://technext.github.io/foodwagon/v1.0.0/assets/img/gallery/discount-item-1.png" alt="Card image cap">
+                    <div class="discount-container-off">
+                        <div>
+                            <h1 class="discount-heading">15</h1>
+                        </div>
+                        <div>
+                            <h2 class="discount-percentage">%</h2>
+                            <h2 class="discount-off">off</h2>
+                        </div>                        
+                    </div>
+                </div>
+                
+                <div class="card-body">
+                    <h5 class="discount-name">Ocean BLue Ring</h5>
+                    <h5 class="remaining-days">6 days Remaining</h5>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <div style="position: relative;">
+                    <img class="card-img-top" src="https://technext.github.io/foodwagon/v1.0.0/assets/img/gallery/discount-item-1.png" alt="Card image cap">
+                    <div class="discount-container-off">
+                        <div>
+                            <h1 class="discount-heading">15</h1>
+                        </div>
+                        <div>
+                            <h2 class="discount-percentage">%</h2>
+                            <h2 class="discount-off">off</h2>
+                        </div>                        
+                    </div>
+                </div>
+                
+                <div class="card-body">
+                    <h5 class="discount-name">Brown Leatherre wallet</h5>
+                    <h5 class="remaining-days">6 days Remaining</h5>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <div style="position: relative;">
+                    <img class="card-img-top" src="https://technext.github.io/foodwagon/v1.0.0/assets/img/gallery/discount-item-1.png" alt="Card image cap">
+                    <div class="discount-container-off">
+                        <div>
+                            <h1 class="discount-heading">15</h1>
+                        </div>
+                        <div>
+                            <h2 class="discount-percentage">%</h2>
+                            <h2 class="discount-off">off</h2>
+                        </div>                        
+                    </div>
+                </div>
+                
+                <div class="card-body">
+                    <h5 class="discount-name">Silverside Wristwatch</h5>
+                    <h5 class="remaining-days">6 days Remaining</h5>
+                </div>
+              </div>
+        </div>
+                 
+       </div>
+</section>
+
+<div class="row">
+    <div class="col-md-3 col-sm-6">
+<div class="product-grid">
+<div class="product-image">
+    <a href="#" class="image">
+        <img class="pic-1" src="https://media.istockphoto.com/id/1175355990/photo/stylish-blue-headphones-on-multi-colored-duo-tone-background-lighting.jpg?s=612x612&w=0&k=20&c=KV7myS20KOzfgRk8CYFSq0y31Sgcu2MLP5zCH1MpLYI=">
+    </a>
+    <span class="product-discount-label">-33%</span>
+    <ul class="product-links">
+        <li><a href="#" data-tip="Add to Wishlist"><i class="fas fa-heart"></i></a></li>
+        <li><a href="#" data-tip="Compare"><i class="fa fa-random"></i></a></li>
+        <li><a href="#" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
+    </ul>
+</div>
+<div class="product-content">
+    
+    <h3 class="title"><a href="#">Men's Blazer</a></h3>
+    <div class="price"><span>$90.00</span> $66.00</div>
+    <a class="add-to-cart" href="#">add to cart</a>
+</div>
+</div>
+</div>
+<div class="col-md-3 col-sm-6">
+<div class="product-grid">
+<div class="product-image">
+    <a href="#" class="image">
+        <img class="pic-1" src="https://media.istockphoto.com/id/1175355990/photo/stylish-blue-headphones-on-multi-colored-duo-tone-background-lighting.jpg?s=612x612&w=0&k=20&c=KV7myS20KOzfgRk8CYFSq0y31Sgcu2MLP5zCH1MpLYI=">
+    </a>
+    <ul class="product-links">
+        <li><a href="#" data-tip="Add to Wishlist"><i class="fas fa-heart"></i></a></li>
+        <li><a href="#" data-tip="Compare"><i class="fa fa-random"></i></a></li>
+        <li><a href="#" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
+    </ul>
+</div>
+<div class="product-content">
+    <h3 class="title"><a href="#">Women's Shirt</a></h3>
+    <div class="price">$79.90</div>
+    <a class="add-to-cart" href="#">add to cart</a>
+</div>
+</div>
+</div>
+</div>
