--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 *{
     font-family: 'Poppins', sans-serif;
 }
+html, body { height: 100%; }
+body { margin: 0;  font-family: 'Poppins', sans-serif; }
