--- a/src/app/includes/header/header.component.html
+++ b/src/app/includes/header/header.component.html
@@ -13,7 +13,7 @@
             <a
               [routerLinkActiveOptions]="{ exact: true }"
               routerLinkActive="active"
-              routerLink="home"
+              routerLink=""
               >Home</a
             >
           </li>
@@ -21,8 +21,8 @@
             <a
               [routerLinkActiveOptions]="{ exact: true }"
               routerLinkActive="active"
-              routerLink="product"
-              >Product</a
+              routerLink="shop"
+              >Shop</a
             >
           </li>
           <li class="nav-item">
@@ -30,7 +30,7 @@
               [routerLinkActiveOptions]="{ exact: true }"
               routerLinkActive="active"
               routerLink="employers"
-              >Employers</a
+              >About Us</a
             >
           </li>
           <li class="nav-item">
@@ -38,7 +38,7 @@
               [routerLinkActiveOptions]="{ exact: true }"
               routerLinkActive="active"
               routerLink="candidate"
-              >Candidate</a
+              >Contact Us</a
             >
           </li>
 
