--- a/src/app/pages/product/components/product-list/product-list.component.html
+++ b/src/app/pages/product/components/product-list/product-list.component.html
@@ -1,32 +1,71 @@
-<p>product-list works!</p>
-
-<button (click)="callService()">call service</button>
 
 <div>
     {{productData | json}}
-    
+</div>
+
+<div class="loadingspinner" *ngIf="!productData">
+    <mat-spinner></mat-spinner>
 </div>
 
 
-<div class="card-container" *ngIf="productData">
-    <div class="card" *ngFor="let product of productData">
-        <img src="{{product.image}}" class="img-responsive" alt="image">
-        <p>{{product.shortDescription}}</p>
-        <div *ngFor="let variation of product.variations">
-            <div class="variation-container">
-                <div *ngFor="let option of variation.options">
-                  <div *ngIf="option.name === 'Color'">
-                    <div>
-                      <p class="variationBox" [ngStyle]="{'background-color': option.option ,'border-color': option.option === selectedColor ? 'black' : 'white'  }" (click)="selectColor(option.option)"></p>
-                    </div>
-                  </div>
-                  <div *ngIf="option == 'Colors'">
-                    <h1>adsasd</h1>
-                  </div>
-                </div>
-              </div>
-              
+<div class="container product-container" >
+    <div class="row">
+
+        <div class="col-md-4 search-sideBar">
+            
         </div>
+        <div class="col-md-8 ">
+            <div class="row">
+                <div class="col-md-4 col-6" *ngFor="let product of productData">
+                    <div class="product-grid">
+                        <div class="product-image">
+                            <a href="#" class="image">
+                                <img class="pic-1" src="{{product.image}}">
+                            </a>
+                            <span class="product-discount-label">-33%</span>
+                            <ul class="product-links">
+                                <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-heart"></i></a></li>
+                                <li><a href="#" data-tip="Compare"><i class="fa fa-random"></i></a></li>
+                                <li><a href="#" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="product-content">
+                            
+                            <h3 class="title"><a href="#">{{product.productName}}</a></h3>
+        
+                              <!-- Simple Products -->
+        
+                            <div *ngIf="product.productType == 0">    
+                                <div class="price"><span>$90.00</span> $66.00</div>
+                               
+                                <button class="add-to-cart" mat-raised-button color="primary">Primary</button>
+                            </div>
+        
+                            <!-- Variation Products -->
+        
+                            <div *ngIf="product.productType == 1">
+                                <div *ngFor="let variation of product.variations">
+                                    <div class="variation-container">
+                                        <div *ngFor="let option of variation.options">
+                                          <div *ngIf="option.name === 'Color'">
+                                            <div>
+                                              <p class="variationBox" [ngStyle]="{'background-color': option.option ,'border-color': option.option === selectedColor ? 'black' : 'white'  }" (click)="selectColor(option)"></p>
+                                            </div>
+                                          </div>
+                                        </div>
+                                    </div>
+                                </div>
+            
+                                <div class="price"><span>$90.00</span> {{variationProdiuctPrice}}</div>
+                                <a class="add-to-cart" href="#">add to cart</a>
+                            </div>
+                          
+                           
+                        </div>     
+                    </div>
+                </div>
+            </div>
+        </div>
+       
     </div>
-   
 </div>
