--- a/src/app/pages/shop/product-list/product-list.component.scss
+++ b/src/app/pages/shop/product-list/product-list.component.scss
@@ -1,62 +1,30 @@
-.loadingspinner{
-    display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.img-responsive{
-    width: 200px;
-    height: 200px;
-}
-.card-container{
-    display: flex;
-    
-}
-.card{
-    background-color: rgb(249, 249, 249);
-    width: 300px;
-    height: 400px;
-    padding: 10px;
-    border-radius: 5px;
-    justify-content: center;
-    margin-right: 10px;
-    box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.07);
-    border: 1px solid gray;
-    align-items: center;
-}
+// product
 .variationBox{
     width: 20px;
     height: 20px;
     border-radius: 60%;
     cursor: pointer;
     margin-right: 10px;
-    border: 2px solid;
+    border: 3px solid;
 }
 .variation-container {
-    display: flex;
-  }
-  
-.selected {
-    border-color: aqua;
-  }
-
-// product
-.product-container{
-  
+   display: flex;
+   justify-content: center;
 }
 .product-grid{
+    background-color: #eeedf3;
     font-family: 'Poppins', sans-serif;
     text-align: center;
-    border-radius: 15px;
-    border: 1px solid rgb(131, 130, 130);
+    border-radius: 10px;
     overflow: hidden;
     transition: all 0.4s ease-out;
     height: 350px;
-    margin: 10px 0px;
+    margin: 15px 0px;
+    box-shadow: 1px 0px 20px rgba(88, 88, 88, 0.486);
     
 }
-.product-grid:hover{ box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.1); }
+.product-grid:hover{ box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.438);cursor: pointer; }
+.product-grid:hover .two-line-ellipsis{ display: none; }
 .product-grid .product-image{ position: relative; }
 .product-grid .product-image a.image{ display: block; }
 .product-grid .product-image img{
@@ -151,10 +119,12 @@
     font-weight: 600;
     text-transform: uppercase;
     margin: 0 0 15px;
+    
 }
 .product-grid .title a{
     color: #2c2c2c;
     transition: all 0.3s ease 0s;
+    font-family: 'Poppins', sans-serif;
 }
 .product-grid .title a:hover{ color: #ffb30e; }
 .product-grid .price{
@@ -163,6 +133,7 @@
     font-weight: 600;
     display: block;
     transition: all 0.4s ease-in-out;
+    margin: 5px 0px;
 }
 .product-grid .price span{
     color: #999;
@@ -192,3 +163,12 @@
     opacity: 1;
     bottom: -40px;
 }
+
+.two-line-ellipsis {
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  
