--- a/src/app/pages/shop/shopmain/shopmain.component.html
+++ b/src/app/pages/shop/shopmain/shopmain.component.html
@@ -5,14 +5,14 @@
     <mat-spinner></mat-spinner>
 </div>
 
-<div class="container product-container" >
+<div class="product-container" *ngIf="productData">
     <div class="shopTop-banner-container">
-        <img class="shopTop-banner" src="https://img.freepik.com/free-vector/black-friday-sale-banner-design-with-shopping-trolly_1055-9167.jpg"/>
+        <img class="shopTop-banner" src="https://static.vecteezy.com/system/resources/previews/007/456/400/non_2x/5-may-shopping-day-poster-or-banner-with-5-over-on-product-podium-scene-5-may-sales-banner-template-design-for-social-media-and-website-vector.jpg"/>
     </div>
     <div class="row">
 
         <div class="col-md-4 search-sideBar">
-            
+          
         </div>
         <div class="col-md-8 ">
             <app-product-list [productDataInput]="productData"></app-product-list>
