--- a/src/app/pages/shop/shopmain/shopmain.component.scss
+++ b/src/app/pages/shop/shopmain/shopmain.component.scss
@@ -9,7 +9,11 @@
 }
 .shopTop-banner{
     width: 100%;
-    height: 300px;
+    height: 350px;
     border-radius: 5px;
-    box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.342);
+    box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.2);
+}
+.product-container{
+    width: 80%;
+    margin: 0 auto;
 }
