--- a/src/app/pages/shop/product-list/product-list.component.scss
+++ b/src/app/pages/shop/product-list/product-list.component.scss
@@ -12,24 +12,24 @@
    justify-content: center;
 }
 .product-grid{
-    background-color: #eeedf3;
+    background-color: #ffff;
     font-family: 'Poppins', sans-serif;
     text-align: center;
     border-radius: 10px;
     overflow: hidden;
     transition: all 0.4s ease-out;
-    height: 350px;
+    height: 400px;
     margin: 15px 0px;
-    box-shadow: 1px 0px 20px rgba(88, 88, 88, 0.486);
+    box-shadow: 1px 0px 10px rgba(88, 88, 88, 0.486);
     
 }
-.product-grid:hover{ box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.438);cursor: pointer; }
+.product-grid:hover{ box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.438);cursor: pointer; }
 .product-grid:hover .two-line-ellipsis{ display: none; }
 .product-grid .product-image{ position: relative; }
 .product-grid .product-image a.image{ display: block; }
 .product-grid .product-image img{
     width: 100%;
-    height: 170px;
+    height: 200px;
 }
 .product-grid .product-discount-label{
     color: #fff;
@@ -125,6 +125,7 @@
     color: #2c2c2c;
     transition: all 0.3s ease 0s;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
 }
 .product-grid .title a:hover{ color: #ffb30e; }
 .product-grid .price{
