--- a/src/app/pages/shop/components/product-list/product-list.component.html
+++ b/src/app/pages/shop/components/product-list/product-list.component.html
@@ -1,7 +1,8 @@
 
-<div class="row">
-   
-    <div class="col-md-4 col-12" *ngFor="let product of productDataInput">
+<div class="row " style="margin-bottom: 50px;">
+    
+
+    <div class="col-md-4 col-12 fade-in" *ngFor="let product of filteredData.slice((currentPage - 1) * itemsPerPage, currentPage * itemsPerPage)" >
 
         <div class="product-grid" >
             <div class="product-image">
@@ -56,5 +57,31 @@
                 
             </div>     
         </div>
+       
     </div>
+
+    
+
+</div>
+<div class="pagination-container">
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+        <li class="page-item" [class.disabled]="currentPage === 1">
+            <a class="page-link" (click)="currentPage = 1">First</a>
+        </li>
+        <li class="page-item" [class.disabled]="currentPage === 1">
+            <a class="page-link" (click)="currentPage = currentPage - 1">Previous</a>
+        </li>
+        <li class="page-item" *ngFor="let page of getPageNumbers()" [class.active]="currentPage === page">
+            <a class="page-link" (click)="currentPage = page">{{ page }}</a>
+        </li>
+
+        <li class="page-item" [class.disabled]="currentPage === totalPages()">
+            <a class="page-link" (click)="currentPage = currentPage + 1">Next</a>
+        </li>
+        <li class="page-item" [class.disabled]="currentPage === totalPages()">
+            <a class="page-link" (click)="currentPage = totalPages()">Last</a>
+        </li>
+        </ul>
+    </nav>
 </div>
