--- a/src/app/pages/shop/components/product-list/product-list.component.scss
+++ b/src/app/pages/shop/components/product-list/product-list.component.scss
@@ -173,5 +173,23 @@
     text-overflow: ellipsis;
   }
   
+  .pagination-container {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
 
-//   zsdzsdzs
+
+  .fade-in  {
+    animation: fade-in 0.5s ease-in;
+  }
+  
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
